--- a/.learn/resets/13-check-your-code/index.html
+++ b/.learn/resets/13-check-your-code/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<link rel="stylesheet" href="styles.css" />
-		<meta charset="UTF-8" />
+		<link rel="stylesheet" href="styles.css" <meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-widht, initial-scale=1.0" />
 		<title>Document</title>
 	</head>
